--- a/paper/1_Initial/bibliography.bib
+++ b/paper/1_Initial/bibliography.bib
@@ -103,6 +103,27 @@
 	langid = {en}
 }
 
+@article{garfinkel2015knowing,
+  title={Knowing your own heart: distinguishing interoceptive accuracy from interoceptive awareness},
+  author={Garfinkel, Sarah N and Seth, Anil K and Barrett, Adam B and Suzuki, Keisuke and Critchley, Hugo D},
+  journal={Biological psychology},
+  volume={104},
+  pages={65--74},
+  year={2015},
+  publisher={Elsevier}
+}
+
+@article{khalsa2018interoception,
+  title={Interoception and mental health: a roadmap},
+  author={Khalsa, Sahib S and Adolphs, Ralph and Cameron, Oliver G and Critchley, Hugo D and Davenport, Paul W and Feinstein, Justin S and Feusner, Jamie D and Garfinkel, Sarah N and Lane, Richard D and Mehling, Wolf E and others},
+  journal={Biological psychiatry: cognitive neuroscience and neuroimaging},
+  volume={3},
+  number={6},
+  pages={501--513},
+  year={2018},
+  publisher={Elsevier}
+}
+
 @article{khalsa2018,
 	title = {Interoception and Mental Health: A Roadmap},
 	author = {Khalsa, Sahib S. and Adolphs, Ralph and Cameron, Oliver G. and Critchley, Hugo D. and Davenport, Paul W. and Feinstein, Justin S. and Feusner, Jamie D. and Garfinkel, Sarah N. and Lane, Richard D. and Mehling, Wolf E. and Meuret, Alicia E. and Nemeroff, Charles B. and Oppenheimer, Stephen and Petzschner, Frederike H. and Pollatos, Olga and Rhudy, Jamie L. and Schramm, Lawrence P. and Simmons, W. Kyle and Stein, Murray B. and Stephan, Klaas E. and Van den Bergh, Omer and Van Diest, Ilse and von Leupoldt, Andreas and Paulus, Martin P. and Ainley, Vivien and Al Zoubi, Obada and Aupperle, Robin and Avery, Jason and Baxter, Leslie and Benke, Christoph and Berner, Laura and Bodurka, Jerzy and Breese, Eric and Brown, Tiffany and Burrows, Kaiping and Cha, Yoon-Hee and Clausen, Ashley and Cosgrove, Kelly and Deville, Danielle and Duncan, Laramie and Duquette, Patrice and Ekhtiari, Hamed and Fine, Thomas and Ford, Bart and Garcia Cordero, Indira and Gleghorn, Diamond and Guereca, Yvette and Harrison, Neil A. and Hassanpour, Mahlega and Hechler, Tanja and Heller, Aaron and Hellman, Natalie and Herbert, Beate and Jarrahi, Behnaz and Kerr, Kara and Kirlic, Namik and Klabunde, Megan and Kraynak, Thomas and Kriegsman, Michael and Kroll, Juliet and Kuplicki, Rayus and Lapidus, Rachel and Le, Trang and Hagen, Kyle Logie and Mayeli, Ahmad and Morris, Amanda and Naqvi, Nasir and Oldroyd, Kristina and {Pané-Farré}, Christiane and Phillips, Raquel and Poppa, Tasha and Potter, Willliam and Puhl, Maria and Safron, Adam and Sala, Margaret and Savitz, Jonathan and Saxon, Heather and Schoenhals, Will and Stanwell-Smith, Colin and Teed, Adam and Terasawa, Yuri and Thompson, Katie and Toups, Marisa and Umeda, Satoshi and Upshaw, Valerie and Victor, Teresa and Wierenga, Christina and Wohlrab, Colleen and Yeh, Hung-wen and Yoris, Adrian and Zeidan, Fadel and Zotev, Vadim and Zucker, Nancy},
